--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
         .main-content-bg {
             background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e2e8f0' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         }
-        .card-3d-effect {
+        .card-lift-effect {
             transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
         }
-        .card-3d-effect:hover {
-            transform: translateY(-8px) perspective(1000px) rotateY(-3deg);
+        .card-lift-effect:hover {
+            transform: translateY(-8px);
             box-shadow: 0 25px 40px -15px rgba(0,0,0,0.2);
         }
         .translate-button {
@@ -154,7 +154,7 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/contact-us.png');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl font-bold font-heading">Contact Us</h1>
@@ -168,7 +168,7 @@
                 <div class="container mx-auto px-6">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                         <!-- Contact Form -->
-                        <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-3d-effect">
+                        <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
                             <h2 class="text-3xl font-bold font-heading mb-6">Send Us a Message</h2>
                             <form action="mailto:info@nigerianembassy.cz" method="post" enctype="text/plain">
                                 <div class="mb-4">
@@ -194,7 +194,7 @@
                         </div>
 
                         <!-- Contact Details & Map -->
-                        <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-3d-effect">
+                        <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
                             <h2 class="text-3xl font-bold font-heading mb-6">Our Information</h2>
                             <div class="space-y-6">
                                 <div><h4 class="font-bold text-xl mb-2 font-heading">Contact Details</h4><ul class="text-gray-700 space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-5 mr-3 mt-1 nigeria-green"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-5 mr-3 nigeria-green"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-5 mr-3 nigeria-green"></i><span>info@nigerianembassy.cz</span></li></ul></div>
@@ -256,23 +256,47 @@
                     dropdownContent.style.display = window.getComputedStyle(dropdownContent).display === 'block' ? 'none' : 'block';
                 });
             });
-            window.addEventListener('click', () => document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none'));
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
             const navContainer = document.querySelector('.hidden.lg\\:flex');
-            mobileMenuButton.addEventListener('click', function() {
-                mobileMenu.classList.toggle('hidden');
-                if (!mobileMenu.classList.contains('hidden')) {
+            
+            mobileMenuButton.addEventListener('click', function(event) {
+                event.stopPropagation();
+                const isHidden = mobileMenu.classList.toggle('hidden');
+                
+                if (!isHidden && mobileMenu.innerHTML.trim() === "") {
                     mobileMenu.innerHTML = navContainer.innerHTML;
-                    mobileMenu.querySelectorAll('.dropdown-toggle').forEach(toggle => {
-                        toggle.addEventListener('click', function(e) {
-                            e.preventDefault();
-                            const content = this.nextElementSibling;
-                            content.style.display = content.style.display === 'block' ? 'none' : 'block';
-                        });
+                    mobileMenu.querySelectorAll('.dropdown').forEach(dropdown => {
+                        const toggle = dropdown.querySelector('.dropdown-toggle');
+                        const content = dropdown.querySelector('.dropdown-content');
+                        if (toggle && content) {
+                            toggle.addEventListener('click', function(e) {
+                                e.preventDefault();
+                                e.stopPropagation();
+                                mobileMenu.querySelectorAll('.dropdown-content').forEach(otherContent => {
+                                    if (otherContent !== content) {
+                                        otherContent.style.display = 'none';
+                                    }
+                                });
+                                content.style.display = content.style.display === 'block' ? 'none' : 'block';
+                            });
+                        }
                     });
                 }
             });
+
+            document.addEventListener('click', function(event) {
+                const isDesktopDropdown = event.target.closest('.dropdown');
+                if (!isDesktopDropdown) {
+                    document.querySelectorAll('header .dropdown-content').forEach(d => d.style.display = 'none');
+                }
+                const isMobileMenuClick = event.target.closest('#mobile-menu');
+                const isMobileButton = event.target.closest('#mobile-menu-button');
+                if (!isMobileMenuClick && !isMobileButton) {
+                    mobileMenu.classList.add('hidden');
+                }
+            });
+
             const translateLink = document.getElementById('translate-link');
             if(translateLink) {
                 const currentPageUrl = window.location.href;
