--- a/cda.html
+++ b/cda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charge D' Affairs' Welcome | Embassy of Nigeria, Prague</title>
+    <title>Charge D' Affaires' Welcome | Embassy of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,7 +95,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Charge D' Affairs' Welcome</a>
+                            <a href="cda.html">Charge D' Affaires' Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -160,7 +160,7 @@
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/cda-background.png');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl font-bold font-heading">Charge D' Affairs' Welcome</h1>
+                <h1 class="text-4xl font-bold font-heading">Charge D' Affaires' Welcome</h1>
             </div>
         </section>
 
@@ -174,7 +174,7 @@
                                 <div class="flex flex-wrap md:flex-nowrap items-start">
                                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
                                         <img src="images/cda.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                        <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">Mrs. Sarah Bukar-Godwin</h3>
+                                        <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">Mrs. Sarah Bukar</h3>
                                         <p class="text-gray-600">Charge D'Affaires A.I.</p>
                                     </div>
                                     <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
