--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Charge D'Affairs' Welcome</a>
+                            <a href="cda.html">Charge D'Affaires' Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -221,14 +221,14 @@
         </section>
         
         <div class="bg-gray-50">
-            <!-- Charge D'Affairs' Welcome -->
+            <!-- Charge D'Affaires' Welcome -->
             <section class="py-20 fade-in-section">
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/cda.jpg" alt="Charge D'Affairs Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/cda.jpg" alt="Charge D'Affaires Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
-                                <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D'Affairs</h2>
+                                <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D'Affaires</h2>
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
                                 <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, I extend a warm welcome to our official website. We are dedicated to fostering strong diplomatic ties and providing excellent consular services.</p>
                                 <a href="cda.html" class="nigeria-green font-semibold hover:underline">Read the full message <i class="fas fa-arrow-right ml-1"></i></a>
