--- a/cda.html
+++ b/cda.html
@@ -175,7 +175,7 @@
                                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
                                         <img src="images/cda.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                                         <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">Mrs. Sarah Bukar</h3>
-                                        <p class="text-gray-600">Charge D'Affaires A.I.</p>
+                                        <p class="text-gray-600">Charge D'Affaires a.i.</p>
                                     </div>
                                     <div class="w-full md:w-2/3 prose max-w-none text-gray-700 space-y-4">
                                         <h2 class="font-heading text-3xl nigeria-green">A Warm Welcome</h2>
